src/main/kubernetes/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: continuousdelivery
  labels:
    app: continuousdelivery
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: continuousdelivery
    spec:
      containers:
      - name: continuousdelivery-app
        image: softwarecraftsmen/continuousdelivery-app:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
