src/main/kubernetes/postgresdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgresdb
  labels:
    app: postgresdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgresdb
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
        - name: POSTGRES_USER
        - name: SPRING_DATASOURCE_USERNAME
          valueFrom:
            secretKeyRef:
              name: datasource-secret
              key: password
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: datasource-secret
              key: username
        image: softwarecraftsmen/continuousdelivery-postgresdb:1.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5432
        name: postgresdb
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgresdb
        - mountPath: /var/lib/postgresql/data
          name: postgresdb-data
      restartPolicy: Always
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
          claimName: postgresdb
      - name: postgresdb-data
        persistentVolumeClaim:
          claimName: postgresdb-data
status: {}
