src/main/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: continuousdelivery
  labels:
    app: continuousdelivery
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: continuousdelivery
