src/main/kubernetes/glusterfs-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: demo
subsets:
  - addresses:
    - ip: 10.18.58.211
    ports:
      - port: 1
  - addresses:
    - ip: 10.18.58.15
    ports:
     - port: 1
